--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch&family=Tapestry&display=swap" rel="stylesheet">
 
 
-<body style="background-image:url('https://i.gyazo.com/43807d0c368c3d84fabca3af96aa5f3d.jpg'); background-repeat: no-repeat; background-size: cover !important; margin:0;">
+<body style="background-image:url('https://i.gyazo.com/7fd4ed863118cd7215c44b95ce742139.png'); background-repeat: no-repeat; background-size: cover !important; margin:0;">
 <img id="pic" align=left src=https://i.gyazo.com/4d82df0dce8e8a8ff4d3674c480d11b3.png width=45% height=100% style="margin-left:-250px;transition: 5s;">
 <br>
 <br>
